--- a/highlight.template.html
+++ b/highlight.template.html
@@ -4,7 +4,14 @@
         This is the highlight directive
     </h3>   
 
-    <input type="text" ng-model="inputval">
+    {{myVal}}
+    <input type="text" ng-model="myVal">
+
+    {{myTitle}}
+
+    <button ng-click="onClick()">
+        Click
+    </button>
 
 
 </div>
